# workflows-playground

./: pyproject.toml  requirements-.txt  requirements.txt
.github/workflows/: routine-tests-windows.yml
tests/: test_version.py
