[tool.poetry]
name = "workflows-playground"
version = "0.1.0"
description = ""
authors = ["freemt"]

[tool.poetry.dependencies]
python = "^3.8"
polyglot = "^16.7.4"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
